2002-02-06  Ian Lance Taylor  <ian@airs.com>

	* MANIFEST, */MANIFEST: Remove.  These files are not used by
	automake.

	* uuconf/cnfnms.c: New file.
	* uuconf.h (struct uuconf_config_file_names): Define.
	(uuconf_config_files): Declare.
	* uuchk.c (main): Dump configuration file names.
	(ukshow_names): New static function.
	* uuconf/Makefile.am (libuuconf_a_SOURCES): Add cnfnms.c.
	* uuconf/Makefile.in: Rebuild.

2002-01-17  Ian Lance Taylor  <ian@airs.com>

	* Many files: Change types and add casts and attributes to avoid
	warnings.

	* uudefs.h: Use attribute macro in ulog declaration.

	* uucp.h: Add GCC attribute macros.

	* configure.in: Add --enable-build-warnings option.
	* Makefile.am (AM_CFLAGS): Add $(WARN_CFLAGS).
	* lib/Makefile.am (AM_CFLAGS): Likewise.
	* unix/Makefile.am (AM_CFLAGS): Likewise.
	* uuconf/Makefile.am (AM_CFLAGS): Likewise.
	* configure, Makefile.in: Rebuild.
	* lib/Makefile.in, unix/Makefile.in, uuconf/Makefile.in: Rebuild.

2002-01-16  Ian Lance Taylor  <ian@airs.com>

	* Makefile.am: New file.
	* lib/Makefile.am: New file.
	* uuconf/Makefile.am: New file.
	* unix/Makefile.am: New file.
	* configure.in: Call AM_INIT_AUTOMAKE.  Change AC_CONFIG_HEADER to
	AM_CONFIG_HEADER.  Call AM_MAINTAINER_MODE.  Call AC_ARG_WITH for
	user name and configuration directories.  Define SBINDIR.  Don't
	call AC_PROG_INSTALL, AC_PROG_MAKE_SET, AC_C_CROSS.  Add
	descriptions to all AC_DEFINE calls.  Don't set or substitute
	CFLAGS or LDFLAGS.  Add UUDIR conditional.  Don't create stamp-h
	in AC_OUTPUT.
	* Makefile.in: Build using automake.
	* lib/Makefile.in: Likewise.
	* uuconf/Makefile.in: Likewise.
	* unix/Makefile.in: Likewise.
	* aclocal.m4: Build using aclocal.
	* config.h.in: Build using autoheader.
	* configure: Rebuild.
	* stamp-h.in: New timestamp file.

	* sysdep.h: Rename from sysh.unx.  A non-Unix port looks
	unlikely.
	* uuconf/syshdr.h: Rename from uuconf/syshdr.unx.

	* AUTHORS: New file, required by automake --gnu.